changed section to div due to no h-tag

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
         </div>
         <p class="text">Main course hemp seeds Southern Italian shiitake mushrooms a delicious meal banana bread lemon tahini dressing apple vinaigrette veggie burgers cool cucumbers coconut sugar. Seasonal edamame hummus asian pear kale bite sized ghost pepper one bowl mediterranean luxury bowl cayenne Thai sun pepper.</p>
       </section>
-      <section class="bottom">
+      <div class="bottom">
         <div class="page1-img"> 
           <img class="lettuce" src="assets/img/lettuce.jpg" alt="picture of lettuce head" width="800" height="640" loading="eager">
           <div class="desktop-only">
@@ -97,7 +97,7 @@
             <img src="assets/icons/arrow-forward.svg" alt="a black forward pointing arrow" width="34" height="30">
           </a> 
         <!--Testade lägga in p+a i div, blev helt konstigt tyvärr-->
-      </section>
+        </div>
     </div>
 <!--PAGE 2 Börjar här-->
     <div id="page2" class="page2"> <!--Får ej länkningen att fungera korrekt utan id?-->
