changed section to div page 3 due to no h-tag

--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
     </div> 
     <!--PAGE 3 Börjar här-->
     <div class="page3">
-      <span class="contact">
+      <div class="contact">
         <h4>Book your table</h4>
         <form>
           <label>
@@ -194,9 +194,9 @@
             <input class="form-button request-button" type="submit" value="Request">
           </div>
         </form>
-      </span>
+      </div>
       <!--Sektion med kontaktinfo-->
-      <section class="img-p3">
+      <div class="img-p3">
         <div class="table">
           <ul class="contact-info">
             <li class="contact-list">
@@ -225,7 +225,7 @@
             </li>
           </ul>
         </div>
-      </section>
+      </div>
     </div>
     <!--End page3-->
     <div class="cookies">
